fix: generando pdf sin medidas